# LiveDownloader

./: .gitignore  README.md  README_EN.md  capacitor.config.json  check_lucide.js  package-lock.json  package.json  vite.config.js
src/: App.css  App.jsx  index.css
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cli.rs  commands.rs  config.rs  main.rs  server.rs
src-tauri/src/common/: client.rs  js_engine.rs  mod.rs
src-tauri/src/engine/: manager.rs  mod.rs  notifier.rs  recorder.rs
src-tauri/src/stream/: proxy.rs
src/components/: LogViewer.jsx  ModalOverlays.jsx  RoomSection.jsx  SettingsSection.jsx  Sidebar.jsx  ThemeSelector.jsx  VideoSection.jsx
src/components/ui/: LiveRecordIcon.tsx  button.jsx  card.jsx  input.jsx  select.jsx  table.jsx
src/lib/: i18n.js
src/services/: api.js
