[package]
name = "LiveDownloader"
version = "0.1.1"
edition = "2024"
default-run = "LiveDownloader"

[features]
default = ["gui"]
gui = ["dep:tauri", "dep:tauri-plugin-opener", "dep:tauri-build"]
server = ["dep:axum", "dep:tower-http"]

[dependencies]
tokio = { version = "1.38", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "socks", "http2", "stream", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust-ini = "0.21"
toml = "0.8"
directories = "5.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
regex = "1.10"
url = "2.5"
boa_engine = "0.19"
chrono = "0.4"
md5 = "0.7"
urlencoding = "2.1"
futures-util = "0.3"
tauri = { version = "2.1", features = ["tray-icon"], optional = true }
tauri-plugin-opener = { version = "2", optional = true }
axum = { version = "0.8", optional = true }
tower-http = { version = "0.6", features = ["cors"], optional = true }
tokio-util = { version = "0.7", features = ["io"] }
socket2 = "0.6"


[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52"

[build-dependencies]
tauri-build = { version = "2", features = [], optional = true }
